Fixed page height whitespace

--- a/public_html/css/compiled/app.css
+++ b/public_html/css/compiled/app.css
@@ -4685,7 +4685,7 @@ input[type=password][class*="form__input--"] {
 .pageBody {
   background-color: white;
   width: 100%;
-  min-height: 700px;
+  min-height: 750px;
   overflow: visible; }
 
 .formButtonWrapper {
